fix: /olap/deliveries - add user
